# explainable-decision-engine

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
cpp/: CMakeLists.txt  bindings.cpp  engine.cpp  engine.h
scripts/: load_test.py
src/api/: main.py  middleware.py  routes.py
src/api/site/: app.html  audit.html  index.html  login.html  metrics.html  report.html
src/api/site/static/: app.js  report.js  site.css  v3.css  v3_audit.js  v3_login.js  v3_metrics.js  v3_portal.js  v3_report.js  v3_shared.js
src/api/static/: swagger.css
src/common/: auth.py  decisioning.py  drift.py  logging.py  metrics_queue.py  model_registry.py  otel.py  rate_limit.py  redis_client.py  schema.py  settings.py  utils.py
src/serving/: explainer.py  model_loader.py  scorer.py
src/training/: data_gen.py  evaluate.py  train.py
tests/: test_explainability.py  test_schema.py  test_scoring.py
